infrastructure/k8s/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: enterprisehub
  labels:
    app.kubernetes.io/part-of: enterprisehub
